fix: todo task get swagger annotation
